# sudoku-solver

./: Cargo.toml  README.md  sudokus_sol.txt
src/: lib.rs  sudoku.rs
