[package]
name = "sudoku-solver"
version = "0.1.0"
authors = ["R-o-b-o <39059788+R-o-b-o@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"